nodejs/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: node
  # type: NodePort  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
